# backward-cpp

./: .gitignore  .travis.yml  BackwardConfig.cmake  BackwardMacros.cmake  CMakeLists.txt  LICENSE.txt  README.md  backward.cpp  backward.hpp  backward.pc.in  backward_config.hpp.in  builds.sh  conanfile.py
doc/: Makefile  _head.html
test/: _test_main.cpp  compile.cpp  divbyzero.cpp  exception.cpp  fib.cpp  invalidread.cpp  invalidread2.cpp  minitrace.cpp  rectrace.cpp  segfault.cpp  select_signals.cpp  simplerecursive.cpp  smalltrace.cpp  stacktrace.cpp  suicide.cpp  test.cpp  test.hpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
